Update web stuff.

--- a/My Projects/main/game/web/sample.html
+++ b/My Projects/main/game/web/sample.html
@@ -25,7 +25,7 @@ else
 var mimeType = "application/x-fulltemplateplugin";
 
 // Internet Explorer
-var projId = "IEAlux3DPlugin.IEWebGameCtrl.1";
+var projId = "IEnotcPlugin.IEWebGameCtrl.1";
 var clsId = "D62D1B36-253D-4218-B033-5ACE0B42B8BF";
 
 var pluginInstalled = false;
